# plugins

./: .gitignore  CMakeLists.txt  INSTALL  README
marytts-wintermute/: CMakeLists.txt  spec.in
marytts-wintermute/src/: plugin.cpp  plugin.hpp
messaging/: CMakeLists.txt  README
messaging/irc-wintermute/: CMakeLists.txt
messaging/irc-wintermute/src/: CMakeLists.txt  backend.cpp  backend.hpp  channel.cpp  channel.hpp  server.cpp  server.hpp  user.cpp  user.hpp
messaging/wintermute-plugin-messaging/: CMakeLists.txt  config.hpp.in  spec.in
messaging/wintermute-plugin-messaging/cmake/: WntrMessagingConfig.cmake.in
messaging/wintermute-plugin-messaging/src/: CMakeLists.txt  config.hpp  plugin.cpp  plugin.hpp  user.cpp  user.hpp
messaging/xmpp-wintermute/: CMakeLists.txt  config.hpp.in
mining/: CMakeLists.txt  README
mining/filesys-wintermute/: CMakeLists.txt  README  config.hpp.in  spec.in
mining/nepomuk-wintermute/: CMakeLists.txt  spec.in
mining/nepomuk-wintermute/src/: CMakeLists.txt
mining/sysinfo-wintermute/: CMakeLists.txt  spec.in
mining/wikipedia-wintermute/: CMakeLists.txt  spec.in
mining/wintermute-plugin-mining/: CMakeLists.txt  README  spec.in
mining/wintermute-plugin-mining/cmake/: WntrMiningConfig.cmake.in  WntrMiningConfigVersion.cmake.in
mining/wintermute-plugin-mining/src/: mining.cpp  mining.hpp  plugin.cpp  plugin.hpp
mining/zeitgeist-wintermute/: CMakeLists.txt  spec.in
mining/zeitgeist-wintermute/cmake/: ZeitgeistWintermuteConfig.cmake.in
pocketsphinx-wintermute/: CMakeLists.txt  spec.in
pocketsphinx-wintermute/src/: plugin.cpp  plugin.hpp  sphinx.cpp  sphinx.hpp
reasoning/: CMakeLists.txt  README
reasoning/wintermute-plugin-reasoning/: CMakeLists.txt  spec.in
reasoning/wintermute-plugin-reasoning/cmake/: WntrReasoningConfig.cmake.in  WntrReasoningConfigVersion.cmake.in
reasoning/wintermute-plugin-reasoning/src/: CMakeLists.txt
sample/: CMakeLists.txt  spec.in
sample/include/: plugin.hpp
sample/src/: plugin.cpp
semantics/: CMakeLists.txt  README
semantics/angel-wintermute/: spec.in
semantics/archangel-wintermute/: spec.in
semantics/cherub-wintermute/: spec.in
semantics/ophan-wintermute/: spec.in
semantics/seraph-wintermute/: spec.in
semantics/wintermute-plugin-semantics/: CMakeLists.txt  spec.in
semantics/wintermute-plugin-semantics/cmake/Modules/: WintermuteSemantics.cmake
semantics/wintermute-plugin-semantics/src/: CMakeLists.txt
skeleton/: BUGS  CMakeLists.txt  NEWS  README  README.plugins  config.hpp.in  spec.in
skeleton/cmake/: PluginConfig.cmake.in  PluginConfigVersion.cmake.in
skeleton/src/: plugin.cpp  plugin.hpp
testing/: CMakeLists.txt  README
testing/wintermute-plugin-testing/: config.hpp.in  spec.in
vision/: CMakeLists.txt
vision/predator-wintermute/: CMakeLists.txt  README  spec.in
vision/wintermute-plugin-vision/: CMakeLists.txt  spec.in
visual/: CMakeLists.txt  README
visual/gui-wintermute/: .directory  CMakeLists.txt  spec.in
visual/gui-wintermute/cmake/: WntrGuiConfig.cmake.in  main.ui.in
visual/gui-wintermute/src/: aboutdialog.cpp  aboutdialog.hpp  backend.cpp  backend.hpp  config.hpp  configui.cpp  configui.hpp  gui.cpp  gui.hpp  mainwindow.cpp  mainwindow.hpp  plugin.cpp  plugin.hpp
visual/gui-wintermute/ui/: aboutdialog.ui  configui.ui  main.ui
visual/ncurses-wintermute/: CMakeLists.txt  config.hpp.in  spec.in
visual/ncurses-wintermute/src/: config.hpp  ncurses.cpp  ncurses.hpp  plugin.cpp  plugin.hpp
visual/nlui-wintermute/: CMakeLists.txt  config.hpp.in  spec.in
visual/nlui-wintermute/src/: backend.cpp  backend.hpp  config.hpp  plugin.cpp  plugin.hpp
visual/wintermute-plugin-frontend/: CMakeLists.txt  spec.in
visual/wintermute-plugin-frontend/cmake/: WntrFrontendConfig.cmake.in
visual/wintermute-plugin-frontend/src/: api.cpp  api.hpp  plugin.cpp  plugin.hpp
visual/wintermute-plugin-visual/: CMakeLists.txt  config.hpp.in  spec.in
visual/wintermute-plugin-visual/cmake/: WntrFrontendConfigVersion.cmake.in  WntrVisualConfig.cmake.in
visual/wintermute-plugin-visual/src/: aboutdialog.cpp  aboutdialog.hpp  api.cpp  api.hpp  config.hpp  plugin.cpp  plugin.hpp
voice/: CMakeLists.txt  README
voice/marytts-wintermute/: CMakeLists.txt  README  config.hpp.in  spec.in
voice/marytts-wintermute/cmake/: MaryTTSWintermutePlugin.Config.cmake.in  MaryTTSWintermutePluginConfigVersion.cmake.in
voice/marytts-wintermute/src/: plugin.hpp
voice/pocketsphinx-wintermute/: CMakeLists.txt  README  config.hpp.in  spec.in
voice/pocketsphinx-wintermute/cmake/: PocketSphinxPluginConfig.cmake.in  PocketSphinxPluginConfigVersion.cmake.in
voice/pocketsphinx-wintermute/src/: config.hpp  plugin.cpp  plugin.hpp  sphinx.cpp  sphinx.hpp
voice/speechd-wintermute/: CMakeLists.txt  README  spec.in
voice/speechd-wintermute/src/: plugin.cpp  plugin.hpp  synthesizer.cpp  synthesizer.hpp
voice/wintermute-plugin-voice/: CMakeLists.txt  spec.in
voice/wintermute-plugin-voice/cmake/: WntrVoiceConfig.cmake.in  WntrVoiceConfigVersion.cmake.in
voice/wintermute-plugin-voice/src/: CMakeLists.txt  input.cpp  input.hpp  output.cpp  output.hpp  plugin.cpp  plugin.hpp  voice.cpp  voice.hpp
wintermute-plugin-voice/: CMakeLists.txt  spec.in  wntrvoice.pc.in
wintermute-plugin-voice/cmake/: WntrVoiceConfig.cmake.in
wintermute-plugin-voice/src/: input.cpp  input.hpp  output.cpp  output.hpp  plugin.cpp  plugin.hpp  voice.cpp  voice.hpp
