project(WntrSemanticsPlugins)
cmake_minimum_required(VERSION 2.8)

include(WintermuteDefaults)
include(WintermuteMacros)

add_subdirectory(wintermute-plugin-semantics)
add_subdirectory(seraph-wintermute)
add_subdirectory(ophan-wintermute)
add_subdirectory(cherub-wintermute)
add_subdirectory(angel-wintermute)	
add_subdirectory(archangel-wintermute)

